crates/musli/tests/ui/enum_content_tag_error.stderr
error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(tag)]
 --> tests/ui/enum_content_tag_error.rs:4:19
  |
4 | #[musli(untagged, tag = "type")]
  |                   ^^^

error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(tag)]
  --> tests/ui/enum_content_tag_error.rs:10:23
   |
10 | #[musli(untagged, tag(value = "type"))]
   |                       ^^^^^

error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(content)]
  --> tests/ui/enum_content_tag_error.rs:16:19
   |
16 | #[musli(untagged, content = "content")]
   |                   ^^^^^^^

error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(content)]
  --> tests/ui/enum_content_tag_error.rs:22:27
   |
22 | #[musli(untagged, content(value = "content"))]
   |                           ^^^^^

error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(tag)]
  --> tests/ui/enum_content_tag_error.rs:28:19
   |
28 | #[musli(untagged, tag = "type", content = "content")]
   |                   ^^^

error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(content)]
  --> tests/ui/enum_content_tag_error.rs:28:33
   |
28 | #[musli(untagged, tag = "type", content = "content")]
   |                                 ^^^^^^^

error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(tag)]
  --> tests/ui/enum_content_tag_error.rs:34:23
   |
34 | #[musli(untagged, tag(value = "type"), content(value = "content"))]
   |                       ^^^^^

error: In #[musli(Binary | Text, ..)] a #[musli(untagged)] enum cannot use #[musli(content)]
  --> tests/ui/enum_content_tag_error.rs:34:48
   |
34 | #[musli(untagged, tag(value = "type"), content(value = "content"))]
   |                                                ^^^^^

error: In #[musli(Binary | Text, ..)] an enum cannot be #[musli(transparent)]
  --> tests/ui/enum_content_tag_error.rs:40:9
   |
40 | #[musli(transparent, tag = "type")]
   |         ^^^^^^^^^^^

error: In #[musli(Binary | Text, ..)] an enum cannot be #[musli(transparent)]
  --> tests/ui/enum_content_tag_error.rs:46:9
   |
46 | #[musli(transparent, content = "content")]
   |         ^^^^^^^^^^^

error: In #[musli(Binary | Text, ..)] an enum cannot be #[musli(transparent)]
  --> tests/ui/enum_content_tag_error.rs:52:9
   |
52 | #[musli(transparent, tag = "type", content = "content")]
   |         ^^^^^^^^^^^
